[package]
name = "rfm95-rs"
version = "0.1.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"
repository = "https://github.com/pietgeursen/bmp280-rs"
description = "I2C driver for the rfm95c lora radio."
license =  "AGPL-3.0"
keywords = ["no_std", "embedded-hal", "rfm95c", "radio", "driver"]

[features]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[dependencies]
defmt = "0.1.3"
embedded-hal = "0.2.4"
nb = "1.0.0"
packed_struct = {version = "0.5.0", default_features = false }
snafu = { version = "0.6.10", default_features = false }
uom = { version = "0.31.1", default_features = false, features = [ "autoconvert", "usize", "u8", "u16", "u32", "u64", "u128", "si"] }

[dev-dependencies]
embedded-hal-mock = "0.7.2"
